2023-11-25T00:43:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6985940146 # 2108
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-25
* notice: last 14d: unq all: 72 113
* notice: prev accum: outdated-unq outdated-all / unq all: 1934 5733 / 2020 5845
* notice: next accum: outdated-unq outdated-all / unq all: 1934 5733 / 2020 5846
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2023-11-24]

2023-11-24T16:12:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6982892681 # 2107
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-24
* notice: last 14d: unq all: 72 112
* notice: prev accum: outdated-unq outdated-all / unq all: 1933 5731 / 2019 5843
* notice: next accum: outdated-unq outdated-all / unq all: 1934 5733 / 2020 5845
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-11-10] / [2023-11-24]

2023-11-24T08:12:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6978330943 # 2106
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-24
* notice: last 14d: unq all: 71 111
* notice: prev accum: outdated-unq outdated-all / unq all: 1933 5731 / 2018 5842
* notice: next accum: outdated-unq outdated-all / unq all: 1933 5731 / 2019 5843
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-10 2023-11-24]

2023-11-24T00:44:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6975516785 # 2105