@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-25T00:43:39Z",
+  "timestamp" : "2023-11-25T08:11:26Z",
   "count_outdated" : 5733,
   "uniques_outdated" : 1934,
-  "count" : 5846,
-  "uniques" : 2020,
+  "count" : 5847,
+  "uniques" : 2021,
   "clones" : [
     {
       "timestamp": "2023-11-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -103,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
