@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-11-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-11-24T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
